<resources>
    <string name="app_launcher_name">Messages</string>
    <string name="type_a_message">Type a message…</string>
    <string name="message_not_sent_short">Message not sent</string>
    <string name="message_not_sent_touch_retry">Not sent. Touch to retry.</string>
    <string name="message_sending_error">Your message to \'%s\' has not been sent</string>
    <string name="add_person">Add Person</string>
    <string name="attachment">Attachment</string>
    <string name="no_conversations_found">No stored conversations have been found</string>
    <string name="start_conversation">Start a conversation</string>
    <string name="reply">Reply</string>
    <string name="show_character_counter">Show a character counter at writing messages</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="no_reply_support">Sender doesn\'t support replies</string>
    <string name="draft">Draft</string>
    <string name="sending">Sending…</string>
    <string name="pin_conversation">Pin to the top</string>
    <string name="unpin_conversation">Unpin</string>
    <string name="forward_message">Forward</string>
    <string name="compress_error">Unable to compress image to selected size</string>
    <string name="duplicate_item_warning">Duplicate item was not included</string>
    <plurals name="and_other_contacts">
        <item quantity="one">and %d other</item>
        <item quantity="other">and %d others</item>
    </plurals>
    <string name="new_conversation">New conversation</string>
    <string name="add_contact_or_number">Add Contact or Number…</string>
    <string name="suggestions">Suggestions</string>
    <string name="members">Members</string>
    <string name="conversation_name">Conversation name</string>
    <string name="conversation_details">Conversation details</string>
    <string name="rename_conversation">Rename conversation</string>
    <string name="rename_conversation_warning">Only you can see this conversation name</string>
    <string name="scheduled_message">Scheduled message</string>
    <string name="schedule_message">Schedule message</string>
    <string name="schedule_send">Schedule send</string>
    <string name="cancel_schedule_send">Cancel schedule send</string>
    <string name="must_pick_time_in_the_future">You must pick a time in the future</string>
    <string name="schedule_send_warning">Keep the phone on and make sure there is nothing killing the app while in background.</string>
    <string name="update_message">Update message</string>
    <string name="send_now">Send now</string>
    <string name="message_details">Message details</string>
    <string name="message_details_sender">Sender</string>
    <string name="message_details_receiver">Receiver</string>
    <string name="message_details_sent_at">Sent at</string>
    <string name="message_details_received_at">Received at</string>
    <string name="channel_received_sms">Received SMS</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="me">Me</string>
    <string name="enable_custom_notifications">Enable custom notifications</string>
    <string name="unarchive">Unarchive</string>
    <string name="empty_archive">Delete all archived conversations</string>
    <string name="archived_conversations">Archive</string>
    <string name="show_archived_conversations">Show archived conversations</string>
    <string name="archive">Archive</string>
    <string name="no_archived_conversations">No archived conversations have been found</string>
    <string name="archive_emptied_successfully">The archive has been emptied successfully</string>
    <string name="empty_archive_confirmation">Are you sure you want to empty the archive? All archived conversations will be permanently lost.</string>
    <string name="keep_conversations_archived">Keep conversations archived</string>
    <string name="restore">Restore</string>
    <string name="restore_all_messages">Restore all messages</string>
    <string name="empty_recycle_bin_messages_confirmation">Are you sure you want to empty the Recycle Bin? The messages will be permanently lost.</string>
    <string name="skip_the_recycle_bin_messages">Skip the Recycle Bin, delete messages directly</string>
    <string name="delete_whole_conversation_confirmation">Are you sure you want to delete all messages of this conversation?</string>
    <string name="archive_confirmation">Are you sure you want to archive %s?</string>
    <string name="restore_whole_conversation_confirmation">Are you sure you want to restore all messages of this conversation?</string>
    <string name="restore_confirmation">Are you sure you want to restore %s?</string>
    <plurals name="delete_conversations">
        <item quantity="one">%d conversation</item>
        <item quantity="other">%d conversations</item>
    </plurals>
    <plurals name="delete_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="keyword">Keyword</string>
    <string name="blocked_keywords">Blocked keywords</string>
    <string name="manage_blocked_keywords">Manage blocked keywords</string>
    <string name="not_blocking_keywords">You are not blocking any keywords. You may add keywords here to block all messages containing them.</string>
    <string name="add_a_blocked_keyword">Add a blocked keyword</string>
    <string name="lock_screen_visibility">Lock screen notification visibility</string>
    <string name="sender_and_message">Sender and message</string>
    <string name="sender_only">Sender only</string>
    <string name="enable_delivery_reports">Enable delivery reports</string>
    <string name="use_simple_characters">Remove accents and diacritics at sending messages</string>
    <string name="send_on_enter">Send message on pressing Enter</string>
    <string name="mms_file_size_limit">Resize sent MMS images</string>
    <string name="mms_file_size_limit_none">No limit</string>
    <string name="outgoing_messages">Outgoing messages</string>
    <string name="group_message_mms">Send group messages as MMS</string>
    <string name="send_long_message_mms">Send long messages as MMS</string>
    <string name="messages">Messages</string>
    <string name="keywords">Keywords</string>
    <string name="export_messages">Export messages</string>
    <string name="export_sms">Export SMS</string>
    <string name="export_mms">Export MMS</string>
    <string name="import_messages">Import messages</string>
    <string name="import_sms">Import SMS</string>
    <string name="import_mms">Import MMS</string>
    <string name="no_option_selected">You have to select at least one item</string>
    <string name="export_blocked_keywords">Export blocked keywords</string>
    <string name="import_blocked_keywords">Import blocked keywords</string>
    <string name="auto_forward">Auto forwarding</string>
    <string name="auto_forward_rules">Rules</string>
    <string name="auto_forward_history">History</string>
    <string name="auto_forward_add_rule">Add rule</string>
    <string name="auto_forward_edit_rule">Edit rule</string>
    <string name="auto_forward_clear_history">Clear history</string>
    <string name="auto_forward_no_rules">No forwarding rules have been added.</string>
    <string name="auto_forward_no_history">No messages have been forwarded yet.</string>
    <string name="auto_forward_privacy_notice">Webhook rules send matching message content to the Feishu bot URL you configure.</string>
    <string name="auto_forward_keywords_hint">Keywords, one per line</string>
    <string name="auto_forward_regex">Regular expression</string>
    <string name="auto_forward_webhook_url">Webhook URL</string>
    <string name="auto_forward_match_type">Match type: %s</string>
    <string name="auto_forward_destination_type">Destination: %s</string>
    <string name="auto_forward_sim_policy">SIM: %s</string>
    <string name="auto_forward_all_match">All messages</string>
    <string name="auto_forward_keyword_match">Keywords</string>
    <string name="auto_forward_regex_match">Regex</string>
    <string name="auto_forward_destination_sms">SMS</string>
    <string name="auto_forward_destination_webhook">Webhook</string>
    <string name="auto_forward_sim_incoming">Incoming SIM</string>
    <string name="auto_forward_sim_default">System default SMS SIM</string>
    <string name="auto_forward_sim_specific">Specific SIM</string>
    <string name="auto_forward_sim_unavailable">Selected SIM is unavailable</string>
    <string name="auto_forward_invalid_regex">Invalid regular expression</string>
    <string name="auto_forward_invalid_webhook">Webhook URL must start with https://</string>
    <string name="auto_forward_missing_destination">Enter a forwarding destination</string>
    <string name="auto_forward_missing_matcher">Enter at least one keyword or a regular expression</string>
    <string name="auto_forward_history_details">Forwarding details</string>
    <string name="auto_forward_clear_history_confirmation">Are you sure you want to clear the forwarding history?</string>
    <string name="auto_forward_status_queued">Queued</string>
    <string name="auto_forward_status_success">Success</string>
    <string name="auto_forward_status_failed">Failed</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enabled">Enabled</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="empty_destination_address">Can\'t send message to an empty number</string>
    <string name="unable_to_save_message">Unable to save message to the telephony database</string>
    <string name="error_service_is_unavailable">Couldn\'t send message, service unavailable</string>
    <string name="error_radio_turned_off">Couldn\'t send message, radio turned off</string>
    <string name="carrier_send_error">Couldn\'t send message, carrier error</string>
    <string name="unknown_error_occurred_sending_message">Couldn\'t send message, error code: %d</string>
    <string name="invalid_short_code">Can\'t reply to short codes like this</string>
    <string name="invalid_short_code_desc">You can only reply to short codes with numbers like \"503501\" but not to codes containing letters and numbers like \"AB-CD0\".</string>
    <string name="attachment_sized_exceeds_max_limit">Attachment size exceeds max MMS limit</string>
    <string name="sim_card_not_available">SIM card not available</string>
    <string name="couldnt_download_mms">Couldn\'t download MMS</string>
    <string name="faq_1_title">Why does the app require access to the internet?</string>
    <string name="faq_1_text">Sadly it is needed for sending MMS attachments. Not being able to send MMS would be a really huge disadvantage compared to other apps, so we decided to go this way.
    However, as usually, there are no ads, tracking or analytics whatsoever, the internet is used only for sending MMS.</string>
    <string name="faq_2_title">The other end is not receiving my MMS, is there anything I can do about it?</string>
    <string name="faq_2_text">MMS size is limited by carriers, you can try setting a smaller limit in the app settings.</string>
    <string name="faq_3_title">Does the app support scheduled messages?</string>
    <string name="faq_3_text">Yes, you can schedule messages to be sent in the future by long pressing the Send button and picking the desired date and time.</string>
    <string name="faq_4_title">Why do my group message replies appear as individual texts to recipients?</string>
    <string name="faq_4_text">You need to enable \"Send group messages as MMS\" in the app settings. This will ensure that group messages are sent as proper MMS, allowing all participants to see each other\'s replies.</string>
</resources>