<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin">

        <org.fossify.commons.views.MyMaterialSwitch
            android:id="@+id/auto_forward_rule_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/auto_forward_rule_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auto_forward_rule_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />
        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/auto_forward_rule_match_type"
            style="@style/SettingsHolderTextViewOneLinerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_all_corners" />

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/auto_forward_rule_keywords_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auto_forward_keywords_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auto_forward_rule_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />
        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/auto_forward_rule_regex_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auto_forward_regex">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auto_forward_rule_regex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />
        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/auto_forward_rule_destination_type"
            style="@style/SettingsHolderTextViewOneLinerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_all_corners" />

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/auto_forward_rule_phone_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auto_forward_rule_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />
        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/auto_forward_rule_webhook_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auto_forward_webhook_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auto_forward_rule_webhook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />
        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/auto_forward_rule_sim_policy"
            style="@style/SettingsHolderTextViewOneLinerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_all_corners" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/auto_forward_rule_privacy_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:text="@string/auto_forward_privacy_notice"
            android:textSize="@dimen/smaller_text_size" />
    </LinearLayout>
</ScrollView>
