<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auto_forward_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/auto_forward_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/auto_forward_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:menu="@menu/menu_auto_forward"
            app:title="@string/auto_forward"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/auto_forward_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/auto_forward_privacy_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_margin"
            android:paddingTop="@dimen/medium_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:text="@string/auto_forward_privacy_notice"
            android:textSize="@dimen/smaller_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/auto_forward_tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auto_forward_privacy_notice">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/auto_forward_rules_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_all_corners"
                android:gravity="center"
                android:padding="@dimen/medium_margin"
                android:text="@string/auto_forward_rules"
                android:textStyle="bold" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/auto_forward_history_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_all_corners"
                android:gravity="center"
                android:padding="@dimen/medium_margin"
                android:text="@string/auto_forward_history"
                android:textStyle="bold" />
        </LinearLayout>

        <org.fossify.commons.views.MyRecyclerView
            android:id="@+id/auto_forward_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auto_forward_tabs"
            tools:listitem="@layout/item_auto_forward_rule" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/auto_forward_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_margin"
            android:text="@string/auto_forward_no_rules"
            android:textSize="@dimen/bigger_text_size"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/auto_forward_tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
